service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-app-service
  labels:
    app: finance-app
spec:
  selector:
    app: finance-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
